--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: mail@sureshsajja.com
 description: > # this means to ignore newlines until "baseurl:"
   CodeRevisited
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://coderevisited.com" # the base hostname & protocol for your site
+url: "https://sureshsajja.github.io/" # the base hostname & protocol for your site
 twitter_username: sureshsajja
 github_username:  sureshsajja
 
