--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,19 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing these this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+title		: CodeRevisited
+description	: Keep Learning.. Cheers!!!
 
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: CodeRevisited
+owner:
+ name	: Suresh Sajja
+ avatar	: suresh.jpg
+ bio	: "Passionate Software Engineer"
+ email	: mail@sureshsajja.com
+ github	: sureshsajja		
+
 email: mail@sureshsajja.com
-description: > # this means to ignore newlines until "baseurl:"
-  CodeRevisited
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://sureshsajja.github.io" # the base hostname & protocol for your site
-twitter_username: sureshsajja
-github_username:  sureshsajja
+
+#url: "http://ec2-52-32-183-180.us-west-2.compute.amazonaws.com/" # EC2 URL
+url: "https://sureshsajja.github.io/" # Github URL
 
 # Build settings
 markdown: kramdown
-theme: minima
 host: 0.0.0.0
 port: 80
