--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ owner:
 
 
 #url: "http://ec2-52-32-183-180.us-west-2.compute.amazonaws.com/" # EC2 URL
-url: "https://sureshsajja.github.io/" # Github URL
+url: "https://sureshsajja.github.io" # Github URL
 
 # Build settings
 markdown: kramdown
