--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 gems:
  - jekyll-paginate
+ - jekyll-gist
 
 # Setup
 title:  CodeRevisited
@@ -12,7 +13,7 @@ description:         'Hello and Welcome to my blog, a blog about techinical lear
 #url: "http://localhost:4000" #localhost
 
 host: 0.0.0.0
-port: 80
+port: 4000
 
 
 disqus_shortname: coderevisited-com
