--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description:         'Hello and Welcome to my blog, a blog about techinical lear
 #url: "http://localhost:4000" #localhost
 
 host: 0.0.0.0
-port: 4000
+port: 80
 
 
 disqus_shortname: coderevisited-com
@@ -28,5 +28,6 @@ author:
   url:  http://coderevisited.com
   email:  mail@sureshsajja.com
 
-
+github:
+  repo: https://github.com/sureshsajja
 
